keycloak/gatekeeper/manifests-v2/04-ingress.yaml
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: application
  annotations:
    kubernetes.io/ingress.class: "system-ingress"
    certmanager.k8s.io/cluster-issuer: monitoring-issuer
spec:
  tls:
    - hosts:
        - application.bart.team
      secretName: app-tls
  rules:
    - host: "application.bart.team"
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: gatekeeper
                port:
                  number: 80
